Projet_GL/src/test/deca/context/valid/unprovided/testObjet/methods/declMethod.deca
// Description:
//   Définition d'une classe avec une méthode
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    cree le 22/01/2018

class A {       
      int getX(int x){
      	  return x;      	   
      }
}

