Projet_GL/src/test/deca/context/invalid/unprovided/testObjet/methods/badReturnType.deca
// Description:
//    Définition d'une méthode avec le mauvais type de retour
//
// Resultat: Ligne 15
//    ContextualError : Method must return expression of int type
//
// Historique:
//    Créé le 24/01/2018

class A{
      int x;
      float y;

      int getX(){
          return y;
      }
}
		       